--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@
 
 html {
 font-size: 62.5%;
-/* scroll-behavior: smooth;
-scroll-snap-type: Y proximity; */
+scroll-behavior: smooth;
+scroll-padding: 10rem;
 }
 
 h1,
